services section - content

--- a/index.html
+++ b/index.html
@@ -80,9 +80,25 @@
     <div class="row section hero">
         <div class="col-xs-12 col-md-7 section-wrapper">
             <h3 class="label">Our Services</h3>
-            <div class="text-primary">Corporate evets</div>
-            <div class="text-third">A great party starts with great music.</div>
-            <div class="text-small">We help turn your party into an unforgettable moment. Lullaby Tunes listen to your need to define what music will resonate the best with you and your closed ones. We strive to be professional, flexible and adaptive to make sure you get the atmosphere you need and the dance floor your party deserves. 
+            <div class="services-block">
+                <div class="text-primary">Corporate evets</div>
+                <div class="text-third">Professionalism first.</div>
+                <div class="text-small">Product launch, corporate parties, grand openings or boat parties: our DJs deliver an elegant European flair with a highly professional attitude.  From advising on the most suitable sound system to booking the proper DJ, we work with great companies to help them make their event a success.
+                </div>
+            </div>
+            <div class="services-block">
+                <div class="text-primary">Audio Branding</div>
+                <div class="text-third">Emotive Audio Content Builds Brand Identity </div>
+                <div class="text-small">Lullaby Tunes works with top brands, stores and hospitality venues to create the perfect synergy for your place. On top of catering a precise sound, we understand that smart use of music and avoiding copyrights violation are always the issues for marketers.
+
+                Be it in-store mixes, commercial scoring or developing a live set that speaks your message, music sets the tone for every experience.
+                </div>
+            </div>
+            <div class="services-block">
+                <div class="text-primary">Weddings and personal parties</div>
+                <div class="text-third">A great party starts with great music.</div>
+                <div class="text-small">We help turn your party into an unforgettable moment. Lullaby Tunes listen to your need to define what music will resonate the best with you and your closed ones. We strive to be professional, flexible and adaptive to make sure you get the atmosphere you need and the dance floor your party deserves.
+                </div>
             </div>
         </div>
     </div>
