--- a/index.html
+++ b/index.html
@@ -58,12 +58,15 @@
 </head>
 <body class="landing">
 <div id="scroll-section">
+<div class="ornament-wrapper">
+            <div class="circle circle1"></div>
+            <div class="circle circle2"></div>
+        </div>
 <div class="nav">
     <div class="container">
         <div class="row section-wrapper middle-md">
             <div class="col-xs-12 col-md-4 col-md-offset-1">
                 <div class="logo"><a target="_blank" href="//lullabytunes.co">
-                    <img src="./img/lullaby-tunes-logo.svg" alt="Lullaby Tunes">
                     Lullaby Tunes 
                     </a></div>
             </div>
@@ -83,7 +86,7 @@
 <div class="container wow fadeIn">
     <div class="row hero middle-md">
         <div class="row">
-            <div class="col-xs-12 col-md-8 col-md-offset-2 no-padding">
+            <div class="col-xs-12 col-md-10 col-md-offset-2 no-padding">
                 <div class="section-wrapper">
                     <h1>We’re a grooving Hong Kong DJ agency from France.</h1>
                 </div>
@@ -96,8 +99,7 @@
                 </div>
             </div>
         </div>
-        <div class="circle circle1"></div>
-        <div class="circle circle2"></div>
+        
     </div>
     
 </div>
