--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="row section-wrapper middle-md">
             <div class="col-xs-12 col-md-4 col-md-offset-1">
                 <div class="logo"><a target="_blank" href="//lullabytunes.co">
-                    Lullaby Tunes 
+                    <img alt="Lullaby Tunes" src="./img/lullaby-tunes-logo.png"><span>Lullaby Tunes</span>
                     </a></div>
             </div>
             <div class="col-md-7 end-xs no-xs" style="display:none;">
@@ -87,7 +87,7 @@
     <div class="row hero middle-xs">
         <div class="row hero-wrapper">
             <div class="col-xs-12 col-md-10 col-md-offset-1 no-padding">
-                    <h1>We’re a groovy Hong Kong DJ agency from France.</h1>
+                    <h1>We’re a groovy Hong Kong-based DJ agency from France.</h1>
             </div> 
         </div>
             <div class="row">
@@ -116,7 +116,7 @@
         </div>
         <div class="row section-wrapper">
             <div class="col-xs-12 col-md-8 col-md-offset-3  section-wrapper">
-                <div class="text-first">Lullaby Tunes can provide a 360° solution for your musical needs. Whether you’re planning an event for your company, celebrating a special occasion or looking to give your venue a musical identity, </div>
+                <div class="text-first">Lullaby Tunes provides a 360° solution for your musical needs. Whether you’re planning an event for your company, celebrating a special occasion or looking to give your venue a musical identity.</div>
             </div>
         </div>
     </div>
