--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="row section-wrapper middle-md">
             <div class="col-xs-12 col-md-4 col-md-offset-1">
                 <div class="logo"><a target="_blank" href="//lullabytunes.co">
-                    <img alt="Lullaby Tunes" src="./img/lullaby-tunes-logo.png"><span>Lullaby Tunes</span>
+                    <img alt="Lullaby Tunes" src="./img/lullaby.tunes.logo.png"><span>Lullaby Tunes</span>
                     </a></div>
             </div>
             <div class="col-md-7 end-xs no-xs" style="display:none;">
