--- a/index.html
+++ b/index.html
@@ -228,8 +228,14 @@
             <div class="col-xs-4 col-md-2 client-logo-wrapper">
                 <img src="./img/clients/lullaby-tunes-cassio.jpg" alt="Cassio">            
             </div>
-            <div class="col-xs-4 no-xs col-md-2 client-logo-wrapper">
+            <div class="col-xs-4 col-md-2 client-logo-wrapper">
                 <img src="./img/clients/lullaby-tunes-salon10.jpg" alt="Salon N.10">            
+            </div>
+            <div class="col-xs-4 col-md-2 client-logo-wrapper">
+                <img src="./img/clients/lullaby-tunes-indiebeach.jpg" alt="Indie Beach">            
+            </div>
+            <div class="col-xs-4 col-md-2 client-logo-wrapper">
+                <img src="./img/clients/lullaby-tunes-honihoni.jpg" alt="Honi Honi">            
             </div>
         </div>
     </div>
