Company name, Surkus logo

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <div class="no-xs col-xs-6 col-md-3 client-logo-wrapper">         
             </div>
             <div class="col-xs-4 col-md-2 client-logo-wrapper">
-                <img src="./img/clients/lullaby-tunes-jinjuu.jpg" alt="Jin Juu">            
+                <img src="./img/clients/lullaby-tunes-surkus.jpg" alt="Surkus Hong Kong">            
             </div>
             <div class="col-xs-4 col-md-2 client-logo-wrapper">
                 <img src="./img/clients/lullaby-tunes-dragon.jpg" alt="Dragon">            
@@ -271,8 +271,8 @@
     
 <footer>
     <div class="row section-wrapper middle-xs">
-        <div class="col-xs-5 col-md-2 col-md-offset-2">    
-            <div class="text-small logo">Lullaby Tunes</div>
+        <div class="col-xs-5 col-md-4 col-md-offset-2">    
+            <div class="text-small logo"><span>Lullaby Tunes</span> by&nbsp;Desirable Life Ltd.</div>
         </div>
         <div class="col-xs-7 col-md-4 col-md-offset-2 end-xs">    
             <div class="text-small"><a href="mailto:hello@lullabytunes.co">hello@lullabytunes.co</a></div>
