--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <link rel="stylesheet" href="./js/glidejs/css/glide.core.min.css">
 
     <link rel="stylesheet" href="./css/flexboxgrid.min.css" type="text/css" />
-    <link rel="stylesheet" href="./css/lullabytunes.css?ver=3" type="text/css" />
+    <link rel="stylesheet" href="./css/lullabytunes.css?ver=4" type="text/css" />
     <link rel="stylesheet" href="./css/lullabytunes-responsive.css?ver=3" type="text/css" />
 
 
@@ -270,12 +270,15 @@
 </div>
     
 <footer>
-    <div class="row section-wrapper middle-xs">
-        <div class="col-xs-5 col-md-4 col-md-offset-2">    
-            <div class="text-small logo"><span>Lullaby Tunes</span> by&nbsp;Desirable Life Ltd.</div>
-        </div>
-        <div class="col-xs-7 col-md-4 col-md-offset-2 end-xs">    
-            <div class="text-small"><a href="mailto:hello@lullabytunes.co">hello@lullabytunes.co</a></div>
+    <div class="container">
+        <div class="row section-wrapper middle-xs">
+            <div class="col-xs-12 col-sm-6 col-sm-offset-1x col-md-5 col-md-offset-1">  
+                <div class="text-small"><a href="mailto:hello@lullabytunes.co">hello@lullabytunes.co</a></div>
+
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-5 end-sm">    
+                <div class="text-small logo"><span>Lullaby Tunes</span> by&nbsp;Desirable Life Ltd.</div>
+            </div>
         </div>
     </div>
 </footer>
